Client/src/app/app.css
:host.start-route {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 64px 1fr;
  grid-template-areas:
    'header'
    'page';
  height: 100vh;
  overflow: hidden;
}

:host {
  display: grid;
  grid-template-columns: 250px 1fr;
  grid-template-rows: 80px 1fr;
  grid-template-areas:
    'header header'
    'sidebar page'
    'footer footer';
  height: 100vh;
  overflow: hidden;
}

app-header {
  grid-area: header;
  display: block;
  height: 64px;
  z-index: 1000;
  background: white;
}

app-sidebar {
  grid-area: sidebar;
  display: block;
  overflow: auto;
}

app-footer {
  grid-area: footer;
  display: block;
}

.page {
  grid-area: page;
  padding: 1rem;
  overflow: auto;
  overflow-y: auto;
}

.page.start-route {
  grid-column: 1 / -1;
  width: 100%;
  padding: 0;
}

.layout {
  display: contents;
}

.checklist-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 24px;
  padding: 24px;
  align-items: stretch;
}

